--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
     "immer": "^9.0.18",
+    "leaflet": "^1.9.3",
     "next": "13.1.5",
     "nextjs-basic-auth-middleware": "^2.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-leaflet": "^4.2.0",
     "typescript": "4.9.4",
     "zustand": "^4.3.2"
   },
