--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "zustand": "^4.3.2"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
