--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-leaflet": "^4.2.0",
+    "react-loader-spinner": "^5.3.4",
     "typescript": "4.9.4",
     "zustand": "^4.3.2"
   },
