--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "axios": "^1.2.3",
+    "clsx": "^1.2.1",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
     "immer": "^9.0.18",
