--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-leaflet": "^4.2.0",
+    "react-leaflet-vector-tile-layer": "^0.1.3",
     "react-loader-spinner": "^5.3.4",
     "start-server-and-test": "^1.15.3",
     "typescript": "4.9.4",
