--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/leaflet": "^1.9.0",
     "autoprefixer": "^10.4.13",
     "cypress": "^12.4.0",
+    "eslint-plugin-simple-import-sort": "^9.0.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
   }
