--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-leaflet-vector-tile-layer": "^0.1.3",
     "react-loader-spinner": "^5.3.4",
     "start-server-and-test": "^1.15.3",
+    "swr": "^2.1.0",
     "typescript": "4.9.4",
     "zustand": "^4.3.2"
   },
