--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node-geocoder": "^4.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.6",
     "react-leaflet": "^4.2.0",
     "react-leaflet-vector-tile-layer": "^0.1.3",
     "react-loader-spinner": "^5.3.4",
