--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.5",
+    "@turf/turf": "^6.5.0",
     "@types/node": "18.11.18",
     "@types/node-geocoder": "^3.24.5",
     "@types/react": "18.0.27",
@@ -35,6 +36,7 @@
     "react-loader-spinner": "^5.3.4",
     "start-server-and-test": "^1.15.3",
     "swr": "^2.1.0",
+    "turf": "^3.0.14",
     "typescript": "4.9.4",
     "zustand": "^4.3.2"
   },
