--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "18.0.10",
     "axios": "^1.2.4",
     "clsx": "^1.2.1",
+    "downshift": "^7.6.0",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
     "immer": "^9.0.18",
