--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-config-next": "13.1.5",
     "immer": "^9.0.18",
     "leaflet": "^1.9.3",
+    "lodash": "^4.17.21",
     "next": "13.1.5",
     "nextjs-basic-auth-middleware": "^2.0.0",
     "node-geocoder": "^4.2.0",
