--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "swr": "^2.1.0",
     "turf": "^3.0.14",
     "typescript": "4.9.4",
+    "usehooks-ts": "^2.9.1",
     "zustand": "^4.3.2"
   },
   "devDependencies": {
