--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-config-next": "13.1.5",
     "immer": "^9.0.18",
     "leaflet": "^1.9.3",
+    "leaflet-draw": "^1.0.4",
     "lodash": "^4.17.21",
     "next": "13.1.5",
     "nextjs-basic-auth-middleware": "^2.0.0",
@@ -34,6 +35,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.6",
     "react-leaflet": "^4.2.0",
+    "react-leaflet-draw": "^0.20.4",
     "react-leaflet-vector-tile-layer": "^0.1.3",
     "react-loader-spinner": "^5.3.4",
     "start-server-and-test": "^1.15.3",
@@ -45,11 +47,13 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.0",
+    "@types/leaflet-draw": "^1.0.6",
     "@types/lodash": "^4.14.191",
     "autoprefixer": "^10.4.13",
     "cypress": "^12.4.0",
     "eslint-plugin-simple-import-sort": "^9.0.0",
     "postcss": "^8.4.21",
+    "prop-types": "^15.8.1",
     "tailwindcss": "^3.2.4"
   }
 }
