--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "downshift": "^7.6.0",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
+    "fast-deep-equal": "^3.1.3",
     "immer": "^9.0.18",
     "leaflet": "^1.9.3",
     "leaflet-draw": "^1.0.4",
