--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node-geocoder": "^3.24.5",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "ace-builds": "^1.16.0",
     "axios": "^1.2.4",
     "clsx": "^1.2.1",
     "downshift": "^7.6.0",
@@ -33,6 +34,7 @@
     "nextjs-basic-auth-middleware": "^2.0.0",
     "node-geocoder": "^4.2.0",
     "react": "18.2.0",
+    "react-ace": "^10.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.6",
     "react-leaflet": "^4.2.0",
