--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next": "13.1.5",
     "nextjs-basic-auth-middleware": "^2.0.0",
     "node-geocoder": "^4.2.0",
+    "osmtogeojson": "^3.0.0-beta.5",
     "react": "18.2.0",
     "react-ace": "^10.1.0",
     "react-dom": "18.2.0",
