--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "axios": "^1.2.4",
     "clsx": "^1.2.1",
     "downshift": "^7.6.0",
-    "eslint": "8.32.0",
+    "eslint": "^8.39.0",
     "eslint-config-next": "13.1.5",
     "fast-deep-equal": "^3.1.3",
     "immer": "^9.0.18",
@@ -55,8 +55,11 @@
     "@types/leaflet": "^1.9.0",
     "@types/leaflet-draw": "^1.0.6",
     "@types/lodash": "^4.14.191",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
     "autoprefixer": "^10.4.13",
     "cypress": "^12.4.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-simple-import-sort": "^9.0.0",
     "postcss": "^8.4.21",
     "prop-types": "^15.8.1",
