--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@next/font": "13.1.5",
     "@turf/turf": "^6.5.0",
     "@types/geojson": "^7946.0.10",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "18.11.18",
     "@types/node-geocoder": "^3.24.5",
     "@types/react": "18.0.27",
@@ -32,6 +33,7 @@
     "leaflet": "^1.9.3",
     "leaflet-draw": "^1.0.4",
     "lodash": "^4.17.21",
+    "mongodb": "^5.3.0",
     "next": "13.1.5",
     "nextjs-basic-auth-middleware": "^2.0.0",
     "node-geocoder": "^4.2.0",
@@ -44,10 +46,12 @@
     "react-leaflet-draw": "^0.20.4",
     "react-leaflet-vector-tile-layer": "^0.1.3",
     "react-loader-spinner": "^5.3.4",
+    "react-toastify": "^9.1.2",
+    "short-uuid": "^4.2.2",
     "start-server-and-test": "^1.15.3",
     "swr": "^2.1.0",
     "turf": "^3.0.14",
-    "typescript": "4.9.4",
+    "typescript": "^5.0.4",
     "usehooks-ts": "^2.9.1",
     "zustand": "^4.3.2"
   },
