--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "ace-builds": "^1.16.0",
     "allotment": "^1.18.1",
     "axios": "^1.2.4",
-    "clsx": "^1.2.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "downshift": "^7.6.0",
     "eslint": "^8.39.0",
     "eslint-config-next": "13.1.5",
@@ -33,6 +34,7 @@
     "leaflet": "^1.9.3",
     "leaflet-draw": "^1.0.4",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.268.0",
     "mongodb": "^5.3.0",
     "next": "13.1.5",
     "nextjs-basic-auth-middleware": "^2.0.0",
@@ -50,6 +52,8 @@
     "short-uuid": "^4.2.2",
     "start-server-and-test": "^1.15.3",
     "swr": "^2.1.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.6",
     "turf": "^3.0.14",
     "typescript": "^5.0.4",
     "usehooks-ts": "^2.9.1",
