--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kid2-overpass-frontend-prototype",
+  "name": "kid2-x-frontend-prototype",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,6 +14,9 @@
   },
   "dependencies": {
     "@next/font": "13.1.5",
+    "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.6",
     "@turf/turf": "^6.5.0",
     "@types/geojson": "^7946.0.10",
     "@types/mongodb": "^4.0.7",
