--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.2.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cobe": "^0.6.3",
     "downshift": "^7.6.0",
     "eslint": "^8.39.0",
     "eslint-config-next": "13.1.5",
@@ -52,6 +53,7 @@
     "react-leaflet-draw": "^0.20.4",
     "react-leaflet-vector-tile-layer": "^0.1.3",
     "react-loader-spinner": "^5.3.4",
+    "react-spring": "^9.7.2",
     "react-toastify": "^9.1.2",
     "short-uuid": "^4.2.2",
     "start-server-and-test": "^1.15.3",
