--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "cobe": "^0.6.3",
     "downshift": "^7.6.0",
     "eslint": "^8.39.0",
-    "eslint-config-next": "13.4.18",
+    "eslint-config-next": "^13.4.18",
     "fast-deep-equal": "^3.1.3",
     "immer": "^9.0.18",
     "leaflet": "^1.9.3",
@@ -42,12 +42,12 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.268.0",
     "mongodb": "^5.3.0",
-    "next": "13.4.18",
+    "next": "^13.4.18",
     "nextjs-basic-auth-middleware": "^2.0.0",
     "node-geocoder": "^4.2.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-ace": "^10.1.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.6",
     "react-leaflet": "^4.2.1",
     "react-leaflet-draw": "^0.20.4",
