--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-ace": "^10.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.6",
+    "react-input-hints": "^3.0.0",
     "react-leaflet": "^4.2.1",
     "react-leaflet-draw": "^0.20.4",
     "react-leaflet-vector-tile-layer": "^0.1.3",
