--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-leaflet-draw": "^0.20.4",
     "react-leaflet-vector-tile-layer": "^0.1.3",
     "react-loader-spinner": "^5.3.4",
+    "react-select": "^5.7.4",
     "react-spring": "^9.7.2",
     "react-toastify": "^9.1.2",
     "short-uuid": "^4.2.2",
