--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "leaflet-draw": "^1.0.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.268.0",
+    "luxon": "^3.4.3",
     "mongodb": "^5.3.0",
     "next": "^13.4.19",
     "nextjs-basic-auth-middleware": "^2.0.0",
