--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kid2-x-frontend-prototype",
+  "name": "kid2-spot-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
