--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
       "@/assets/*": ["src/assets/*"],
       "@/stores/*": ["src/stores/*"],
       "@/lib/*": ["src/lib/*"],
+      "@/hooks/*": ["src/lib/hooks/*"],
       "@/styles/*": ["src/styles/*"],
       "@/components/*": ["src/components/*"]
     },
