add missing env vars

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
-APP_USER=
-APP_PASSWORD=
+ENVIRONMENT=development
+NEXT_PUBLIC_MAPTILER_KEY=
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=
+NEXT_PUBLIC_NLP_API=
+MONGODB_URI=
+MONGODB_DBNAME=
+NEXT_PUBLIC_API_BASE_URL=http://localhost:3000
+NEXT_PUBLIC_OSM_API=
+NEXT_PUBLIC_NOMINATIM_API=
