--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/node-geocoder": "^3.24.5",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "@types/react-resizable": "^3.0.5",
     "ace-builds": "^1.16.0",
     "allotment": "^1.19.2",
     "axios": "^1.2.4",
@@ -55,12 +56,14 @@
     "react": "^18.2.0",
     "react-ace": "^10.1.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-hook-form": "^7.43.6",
     "react-input-hints": "^3.0.0",
     "react-leaflet": "^4.2.1",
     "react-leaflet-draw": "^0.20.4",
     "react-leaflet-vector-tile-layer": "^0.1.3",
     "react-loader-spinner": "^5.3.4",
+    "react-resizable": "^3.0.5",
     "react-select": "^5.7.4",
     "react-spring": "^9.7.2",
     "react-toastify": "^9.1.2",
