--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 ENVIRONMENT=development
-NEXT_PUBLIC_MAPTILER_KEY=
+NEXT_PUBLIC_MAPBOX_KEY=
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=
 NEXT_PUBLIC_NLP_API=
 MONGODB_URI=
