--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-leaflet-draw": "^0.20.4",
     "react-leaflet-vector-tile-layer": "^0.1.3",
     "react-loader-spinner": "^5.3.4",
+    "react-query": "^3.39.3",
     "react-resizable": "^3.0.5",
     "react-select": "^5.7.4",
     "react-spring": "^9.7.2",
