--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-config-next": "^14.1.0",
     "fast-deep-equal": "^3.1.3",
     "immer": "^9.0.18",
+    "immutable": "^5.0.0-beta.5",
     "leaflet": "^1.9.3",
     "leaflet-draw": "^1.0.4",
     "lodash": "^4.17.21",
@@ -76,6 +77,7 @@
     "zustand": "^4.3.2"
   },
   "devDependencies": {
+    "@types/immutable": "^3.8.7",
     "@types/leaflet": "^1.9.0",
     "@types/leaflet-draw": "^1.0.6",
     "@types/lodash": "^4.14.191",
