--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "luxon": "^3.4.4",
     "mongodb": "^6.5.0",
     "next": "^14.1.3",
+    "next-auth": "^4.24.7",
     "nextjs-basic-auth-middleware": "^3.1.0",
     "react": "^18.3.0",
     "react-ace": "^11.0.1",
