--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-query": "^5.48.0",
     "@turf/turf": "^6.5.0",
     "ace-builds": "^1.33.1",
     "axios": "^1.6.8",
@@ -51,7 +52,6 @@
     "react-leaflet-vector-tile-layer": "^0.3.2",
     "react-loader-spinner": "^6.1.6",
     "react-markdown": "^9.0.1",
-    "react-query": "^3.39.3",
     "react-resizable": "^3.0.5",
     "react-select": "^5.8.0",
     "react-spring": "^9.7.3",
@@ -82,6 +82,7 @@
     "autoprefixer": "^10.4.19",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-simple-import-sort": "^12.1.0",
+    "eslint-plugin-unused-imports": "^4.0.0",
     "postcss": "^8.4.38",
     "prop-types": "^15.8.1",
     "tailwindcss": "^3.4.3"
