--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "downshift": "^9.0.4",
-    "eslint": "^9.1.1",
+    "eslint": "8.57.0",
     "eslint-config-next": "^14.2.4",
     "immer": "^10.0.4",
     "leaflet": "^1.9.3",
