--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,14 +4,6 @@
   "rules": {
     "simple-import-sort/imports": "error",
     "simple-import-sort/exports": "error",
-    "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": [
-      "error",
-      {
-        "vars": "all",
-        "args": "after-used",
-        "ignoreRestSiblings": true
-      }
-    ]
+    "no-unused-vars": "off"
   }
 }
