--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "downshift": "^9.0.4",
     "eslint": "8.57.0",
     "eslint-config-next": "^14.2.4",
+    "gray-matter": "^4.0.3",
     "immer": "^10.0.4",
     "leaflet": "^1.9.3",
     "leaflet-draw": "^1.0.4",
