--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=
 NEXT_PUBLIC_NLP_API=
 MONGODB_URI=
 MONGODB_DBNAME=
-NEXT_PUBLIC_API_BASE_URL=http://localhost:3000
+NEXT_PUBLIC_API_BASE_URL=http://localhost:3002
 NEXT_PUBLIC_OSM_API=
 NEXT_PUBLIC_NOMINATIM_API=
+SPOT_MAINTENANCE=
