--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@use-gesture/react": "^10.3.1",
     "ace-builds": "^1.33.1",
     "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "downshift": "^9.0.4",
@@ -84,7 +86,7 @@
     "autoprefixer": "^10.4.19",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-simple-import-sort": "^12.1.0",
-    "eslint-plugin-unused-imports": "^4.0.0",
+    "eslint-plugin-unused-imports": "^3.1.0",
     "postcss": "^8.4.38",
     "prop-types": "^15.8.1",
     "tailwindcss": "^3.4.3"
