fix: downgrade to latest stable version

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "lucide-react": "^0.373.0",
     "luxon": "^3.4.4",
     "mongodb": "^6.5.0",
-    "next": "^14.2.4",
+    "next": "14.2.33",
     "next-auth": "^4.24.7",
     "nextjs-basic-auth-middleware": "^3.1.0",
     "react": "^18.3.1",
